# promptstrings

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  workflow.yml
design/: README.md  VISION.md  glossary.md
design/agent-dx/: README.md
design/decisions/: 0000-template.md  0001-api-and-dx-baseline-for-1.0.md  0002-integration-seams-for-1.0.md  0003-error-class-field-schema.md  0004-generator-strict-mode-mechanism.md  0005-t-string-template-grammar.md  0006-injection-safety-and-template-source-boundaries.md  0007-integrations-and-annotated-di-syntax.md  0008-async-resolver-cancellation-and-error-propagation.md  0009-response-schema-property.md  README.md
design/dx/: README.md  integration-patterns.md
design/notes/: README.md  red-team-corpus-integrated-audit.md  red-team-cross-doc-consistency-audit.md  red-team-round-1-contract-completeness.md  red-team-round-2-execution-and-rollback.md  red-team-round-3-wording-and-legibility.md  red-team-vision-round-1-argumentative-integrity.md  red-team-vision-round-2-consistency.md  red-team-vision-round-3-reader-experience.md
design/proposals/: README.md  api-1.0-baseline.md  api-1.0-integrations.md
src/promptstrings/: __init__.py  core.py
src/promptstrings/integrations/: dishka.py  pydantic.py
tests/: test_promptstrings.py
