[project]
name = "promptstrings"
version = "1.1.0"
description = "Strict prompt-template composition with provenance tracking and dependency injection."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
authors = [
    { name = "Daniyar Supiyev", email = "undead.thunderbird@gmail.com" },
]
keywords = ["prompt", "llm", "template", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/uthunderbird/promptstrings"
Repository = "https://github.com/uthunderbird/promptstrings"
Issues = "https://github.com/uthunderbird/promptstrings/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
dishka = ["dishka>=1.0"]
pydantic = ["pydantic>=2.0,<3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptstrings"]

[tool.pytest.ini_options]
addopts = ["-q"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["promptstrings"]

[tool.mypy]
python_version = "3.14"
strict = true

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.6",
    "mypy>=1.19.1",
    "dishka>=1.0",
    "pydantic>=2.0,<3.0",
]
